syntax = "proto3";
package provider.grpc;

enum Symbol {
    EUR_USD = 0;
    EUR_GBP = 1;
    GBP_USD = 2;
    USD_JPY = 3;
    EUR_JPY = 4;
    GBP_JPY = 5;
}